--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,7 +45,7 @@ dependencies:
   file_picker: ^10.3.7
   provider: ^6.1.2
   go_router: ^14.1.3
-
+  flutter_dotenv: ^5.1.0
   photo_view: ^0.14.0
   flutter_pdfview: ^1.3.1
 
@@ -74,6 +74,9 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   # assets:
+
+  assets:
+    - .env
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
