--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "dignitywithcare",
-    "short_name": "dignitywithcare",
+    "name": "businessmanagerpro",
+    "short_name": "businessmanager",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
