--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: dignitywithcare
+name: my_business_manager
 description: "A new Flutter project."
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
@@ -48,6 +48,8 @@ dependencies:
   flutter_dotenv: ^5.1.0
   photo_view: ^0.14.0
   flutter_pdfview: ^1.3.1
+  rename_app: ^1.6.5
+  google_fonts: ^6.2.0
 
 dev_dependencies:
   flutter_test:
@@ -59,6 +61,31 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^5.0.0
+  change_app_package_name: ^1.1.0
+  flutter_launcher_icons: ^0.13.1
+
+#run this command to generate app icons
+# flutter pub run flutter_launcher_icons
+flutter_launcher_icons:
+  android: true
+  ios: true
+  image_path: "assets/icons/app_logo.png"
+
+  web:
+    generate: true
+    image_path: "assets/icons/app_logo.png"
+
+  macos:
+    generate: true
+    image_path: "assets/icons/app_logo.png"
+
+  windows:
+    generate: true
+    image_path: "assets/icons/app_logo.png"
+
+  linux:
+    generate: true
+    image_path: "assets/icons/app_logo.png"
 
 
 # For information on the generic Dart part of this file, see the
@@ -76,7 +103,10 @@ flutter:
   # assets:
 
   assets:
-#    - .env
+    - assets/icons/app_logo.png
+    - assets/icons/app_logo_nobackground.png
+    - assets/icons/app_logo_nobackground-min.png
+    - .env
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
