Summarize the changes:
This update introduces a subscription system, improves profile management, and enhances the application's cross-platform configuration. Key additions include a `SubscriptionDialog` for plan selection during registration, integration with `purchases_flutter` for in-app transactions, and the implementation of profile image uploads to Firebase Storage.

The routing logic has been organized into a dedicated `router/` directory, and environment variable support via `flutter_dotenv` is now enabled for mobile platforms. Additionally, the admin dashboard now displays business-specific profiles, and various UI improvements were made to registration and dashboard screens.

Specific changes:
- **Subscriptions:** Added `SubscriptionProvider`, `SubscriptionDialog`, and updated business models/registration to support tiered plans.
- **Profile Management:** Implemented `ProfileScreen` and added `uploadProfileImage` functionality using `image_picker` and `Firebase Storage`.
- **Architecture:** Moved routing files to `lib/router/` and updated imports across the project.
- **Environment & Config:** Integrated `flutter_dotenv` and added a `.env` template; updated Firebase configurations for multiple platforms.
- **UI/UX:** Added profile display to the Admin Dashboard and simplified user models by making `dateOfBirth` optional.
- **Platform Support:** Updated generated plugin registrants for macOS, Linux, and Windows to support `file_selector` and `url_launcher`.

--- a/firebase.json
+++ b/firebase.json
@@ -39,6 +39,7 @@
     }
   },
   "hosting": {
+    "site": "mybusinessmanager",
     "public": "build/web",
     "ignore": [
       "firebase.json",
@@ -51,5 +52,19 @@
         "destination": "/index.html"
       }
     ]
-  }
+  },
+  "functions": [
+    {
+      "source": "functions",
+      "codebase": "default",
+      "disallowLegacyRuntimeConfig": true,
+      "ignore": [
+        "node_modules",
+        ".git",
+        "firebase-debug.log",
+        "firebase-debug.*.log",
+        "*.local"
+      ]
+    }
+  ]
 }
