--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,7 +2,7 @@ name: my_business_manager
 description: "A new Flutter project."
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+publish_to: 'none' # Remove t`his line if you wish to publish to pub.dev
 
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
@@ -16,7 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.0.0+1
+version: 1.0.1+2
 
 environment:
   sdk: ^3.7.0
@@ -40,6 +40,9 @@ dependencies:
   firebase_auth: ^5.1.4
   cloud_firestore: ^5.4.4
   firebase_storage: ^12.1.3
+  dotenv: ^4.2.0
+
+  purchases_flutter: ^9.9.10
 
   get_storage: ^2.1.1
   file_picker: ^10.3.7
@@ -50,6 +53,9 @@ dependencies:
   flutter_pdfview: ^1.3.1
   rename_app: ^1.6.5
   google_fonts: ^6.2.0
+  image_picker: ^1.2.1
+  url_launcher: ^6.3.2
+  http: ^1.6.0
 
 dev_dependencies:
   flutter_test:
@@ -107,6 +113,7 @@ flutter:
     - assets/icons/app_logo_nobackground.png
     - assets/icons/app_logo_nobackground-min.png
     - .env
+    - assets/
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
