--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,7 @@ dependencies:
   image_picker: ^1.2.1
   url_launcher: ^6.3.2
   http: ^1.6.0
+  intl: ^0.20.2
 
 dev_dependencies:
   flutter_test:
